Project

General

Profile

Actions

Bug #2610

closed

c-return hooks aren't always there

Bug #2610: c-return hooks aren't always there

Added by rogerdpack (Roger Pack) over 16 years ago. Updated over 15 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 1.9.2dev (2009-12-31 trunk 26205) [i386-mingw32]
Backport:
[ruby-core:27606]

Description

=begin
With this snippet:

[1,2,3].any? {|n| n}

If you set a (c-based) event hook before calling it, you get this output:

c-call E:/dev/ruby/ruby-prof/test/bad2.rb: 1 Enumerable#any?
c-call E:/dev/ruby/ruby-prof/test/bad2.rb: 1 Array#each
line E:/dev/ruby/ruby-prof/test/bad2.rb: 1 Object#(null)
c-return E:/dev/ruby/ruby-prof/test/bad2.rb: 1 Enumerable#any?
...

There is no call for Array#each's return.

Thanks.
-r
=end


Related issues 1 (0 open1 closed)

Related to Backport191 - Backport #2672: backport 26395ClosedActions
Actions

Also available in: PDF Atom