* eval.c, vm.c, vm_eval.c, vm_insnhelper.c: fix issues about   return and c-return trace.  This issue skips (c-)return event   with global jump such as break or return.  This fix make vm invoke   hooks at stack rewind timing.  fix [ruby-core:27606] [Bug #2610]. * test/ruby/test_settracefunc.rb: add a test for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26395 b2dd03c8-39d4-4d8f-98ff-823fe69b080e